src/FlowtideDotNet.Connector.SpiceDB/Internal/SchemaParser/Generated/SpicedbParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from g4/SpicedbParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class SpicedbParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DEFINITION=1, RELATION=2, PERMISSION=3, CAVEAT=4, COLON=5, STAR=6, PLUS=7, 
		AND=8, POINTER=9, LEFT_CURLY=10, RIGHT_CURLY=11, EQUALS=12, PIPE=13, HASH=14, 
		LEFT_PAREN=15, RIGHT_PAREN=16, COMMA=17, QUESTION=18, OR_PIPES=19, DOUBLE_AND=20, 
		SMALLER_THAN=21, GREATER_THAN=22, SMALLER_THAN_OR_EQUAL=23, GREATER_THAN_OR_EQUAL=24, 
		NOT_EQUAL=25, EQUAL=26, IN=27, DASH=28, DIVIDE=29, MOD=30, EXCLAMATION=31, 
		DOT=32, LEFT_SQUARE=33, RIGHT_SQUARE=34, NULL=35, TRUE=36, FALSE=37, WITH=38, 
		IDENTIFIER=39, LineComment=40, BlockComment=41, SPACES=42, STRING_LITERAL=43, 
		NUMERIC_LITERAL=44;
	public const int
		RULE_parse = 0, RULE_def = 1, RULE_block = 2, RULE_caveat = 3, RULE_caveat_parameter = 4, 
		RULE_type_definition = 5, RULE_type_relation = 6, RULE_relation_type = 7, 
		RULE_userset = 8, RULE_literal_value = 9, RULE_cel_expr = 10, RULE_cel_conditional_or = 11, 
		RULE_cel_conditional_and = 12, RULE_cel_relation = 13, RULE_cel_relop = 14, 
		RULE_cel_addition = 15, RULE_cel_multiplication = 16, RULE_cel_unary = 17, 
		RULE_cel_member = 18, RULE_cel_primary = 19, RULE_cel_expr_list = 20, 
		RULE_cel_map_inits = 21, RULE_cel_fields_init = 22;
	public static readonly string[] ruleNames = {
		"parse", "def", "block", "caveat", "caveat_parameter", "type_definition", 
		"type_relation", "relation_type", "userset", "literal_value", "cel_expr", 
		"cel_conditional_or", "cel_conditional_and", "cel_relation", "cel_relop", 
		"cel_addition", "cel_multiplication", "cel_unary", "cel_member", "cel_primary", 
		"cel_expr_list", "cel_map_inits", "cel_fields_init"
	};

	private static readonly string[] _LiteralNames = {
		null, "'definition'", "'relation'", "'permission'", "'caveat'", "':'", 
		"'*'", "'+'", "'&'", "'->'", "'{'", "'}'", "'='", "'|'", "'#'", "'('", 
		"')'", "','", "'?'", "'||'", "'&&'", "'<'", "'>'", "'<='", "'>='", "'!='", 
		"'=='", "'in'", "'-'", "'/'", "'%'", "'!'", "'.'", "'['", "']'", "'null'", 
		"'true'", "'false'", "'with'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DEFINITION", "RELATION", "PERMISSION", "CAVEAT", "COLON", "STAR", 
		"PLUS", "AND", "POINTER", "LEFT_CURLY", "RIGHT_CURLY", "EQUALS", "PIPE", 
		"HASH", "LEFT_PAREN", "RIGHT_PAREN", "COMMA", "QUESTION", "OR_PIPES", 
		"DOUBLE_AND", "SMALLER_THAN", "GREATER_THAN", "SMALLER_THAN_OR_EQUAL", 
		"GREATER_THAN_OR_EQUAL", "NOT_EQUAL", "EQUAL", "IN", "DASH", "DIVIDE", 
		"MOD", "EXCLAMATION", "DOT", "LEFT_SQUARE", "RIGHT_SQUARE", "NULL", "TRUE", 
		"FALSE", "WITH", "IDENTIFIER", "LineComment", "BlockComment", "SPACES", 
		"STRING_LITERAL", "NUMERIC_LITERAL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SpicedbParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SpicedbParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SpicedbParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SpicedbParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ParseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SpicedbParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parse; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.EnterParse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.ExitParse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpicedbParserVisitor<TResult> typedVisitor = visitor as ISpicedbParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParseContext parse() {
		ParseContext _localctx = new ParseContext(Context, State);
		EnterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DEFINITION || _la==CAVEAT) {
				{
				{
				State = 46;
				block();
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 52;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINITION() { return GetToken(SpicedbParser.DEFINITION, 0); }
		public DefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.EnterDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.ExitDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpicedbParserVisitor<TResult> typedVisitor = visitor as ISpicedbParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefContext def() {
		DefContext _localctx = new DefContext(Context, State);
		EnterRule(_localctx, 2, RULE_def);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			Match(DEFINITION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Type_definitionContext type_definition() {
			return GetRuleContext<Type_definitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CaveatContext caveat() {
			return GetRuleContext<CaveatContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpicedbParserVisitor<TResult> typedVisitor = visitor as ISpicedbParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 4, RULE_block);
		try {
			State = 58;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DEFINITION:
				EnterOuterAlt(_localctx, 1);
				{
				State = 56;
				type_definition();
				}
				break;
			case CAVEAT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 57;
				caveat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CaveatContext : ParserRuleContext {
		public IToken definition_name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CAVEAT() { return GetToken(SpicedbParser.CAVEAT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFT_PAREN() { return GetToken(SpicedbParser.LEFT_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHT_PAREN() { return GetToken(SpicedbParser.RIGHT_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFT_CURLY() { return GetToken(SpicedbParser.LEFT_CURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHT_CURLY() { return GetToken(SpicedbParser.RIGHT_CURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(SpicedbParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Caveat_parameterContext[] caveat_parameter() {
			return GetRuleContexts<Caveat_parameterContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Caveat_parameterContext caveat_parameter(int i) {
			return GetRuleContext<Caveat_parameterContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(SpicedbParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(SpicedbParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Cel_exprContext[] cel_expr() {
			return GetRuleContexts<Cel_exprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Cel_exprContext cel_expr(int i) {
			return GetRuleContext<Cel_exprContext>(i);
		}
		public CaveatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_caveat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.EnterCaveat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.ExitCaveat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpicedbParserVisitor<TResult> typedVisitor = visitor as ISpicedbParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCaveat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CaveatContext caveat() {
		CaveatContext _localctx = new CaveatContext(Context, State);
		EnterRule(_localctx, 6, RULE_caveat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			Match(CAVEAT);
			State = 61;
			_localctx.definition_name = Match(IDENTIFIER);
			State = 62;
			Match(LEFT_PAREN);
			State = 64;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENTIFIER) {
				{
				State = 63;
				caveat_parameter();
				}
			}

			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 66;
				Match(COMMA);
				State = 67;
				caveat_parameter();
				}
				}
				State = 72;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 73;
			Match(RIGHT_PAREN);
			State = 74;
			Match(LEFT_CURLY);
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 27193853903872L) != 0)) {
				{
				{
				State = 75;
				cel_expr();
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 81;
			Match(RIGHT_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Caveat_parameterContext : ParserRuleContext {
		public IToken name;
		public IToken parameter_type;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(SpicedbParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(SpicedbParser.IDENTIFIER, i);
		}
		public Caveat_parameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_caveat_parameter; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.EnterCaveat_parameter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.ExitCaveat_parameter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpicedbParserVisitor<TResult> typedVisitor = visitor as ISpicedbParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCaveat_parameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Caveat_parameterContext caveat_parameter() {
		Caveat_parameterContext _localctx = new Caveat_parameterContext(Context, State);
		EnterRule(_localctx, 8, RULE_caveat_parameter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			_localctx.name = Match(IDENTIFIER);
			State = 84;
			_localctx.parameter_type = Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_definitionContext : ParserRuleContext {
		public IToken definition_name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINITION() { return GetToken(SpicedbParser.DEFINITION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFT_CURLY() { return GetToken(SpicedbParser.LEFT_CURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHT_CURLY() { return GetToken(SpicedbParser.RIGHT_CURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(SpicedbParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_relationContext[] type_relation() {
			return GetRuleContexts<Type_relationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_relationContext type_relation(int i) {
			return GetRuleContext<Type_relationContext>(i);
		}
		public Type_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_definition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.EnterType_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.ExitType_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpicedbParserVisitor<TResult> typedVisitor = visitor as ISpicedbParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_definition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Type_definitionContext type_definition() {
		Type_definitionContext _localctx = new Type_definitionContext(Context, State);
		EnterRule(_localctx, 10, RULE_type_definition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(DEFINITION);
			State = 87;
			_localctx.definition_name = Match(IDENTIFIER);
			State = 88;
			Match(LEFT_CURLY);
			State = 92;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==RELATION || _la==PERMISSION) {
				{
				{
				State = 89;
				type_relation();
				}
				}
				State = 94;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 95;
			Match(RIGHT_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_relationContext : ParserRuleContext {
		public IToken relation;
		public IToken relation_name;
		public IToken permission;
		public IToken permission_name;
		public UsersetContext permission_userset;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(SpicedbParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Relation_typeContext[] relation_type() {
			return GetRuleContexts<Relation_typeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Relation_typeContext relation_type(int i) {
			return GetRuleContext<Relation_typeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RELATION() { return GetToken(SpicedbParser.RELATION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(SpicedbParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PIPE() { return GetTokens(SpicedbParser.PIPE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PIPE(int i) {
			return GetToken(SpicedbParser.PIPE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(SpicedbParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PERMISSION() { return GetToken(SpicedbParser.PERMISSION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UsersetContext userset() {
			return GetRuleContext<UsersetContext>(0);
		}
		public Type_relationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_relation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.EnterType_relation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.ExitType_relation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpicedbParserVisitor<TResult> typedVisitor = visitor as ISpicedbParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_relation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Type_relationContext type_relation() {
		Type_relationContext _localctx = new Type_relationContext(Context, State);
		EnterRule(_localctx, 12, RULE_type_relation);
		int _la;
		try {
			State = 112;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case RELATION:
				EnterOuterAlt(_localctx, 1);
				{
				State = 97;
				_localctx.relation = Match(RELATION);
				State = 98;
				_localctx.relation_name = Match(IDENTIFIER);
				State = 99;
				Match(COLON);
				State = 100;
				relation_type();
				State = 105;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==PIPE) {
					{
					{
					State = 101;
					Match(PIPE);
					State = 102;
					relation_type();
					}
					}
					State = 107;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case PERMISSION:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108;
				_localctx.permission = Match(PERMISSION);
				State = 109;
				_localctx.permission_name = Match(IDENTIFIER);
				State = 110;
				Match(EQUALS);
				State = 111;
				_localctx.permission_userset = userset(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Relation_typeContext : ParserRuleContext {
		public IToken name;
		public IToken star;
		public IToken relation;
		public IToken caveat_name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(SpicedbParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(SpicedbParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WITH() { return GetToken(SpicedbParser.WITH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(SpicedbParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HASH() { return GetToken(SpicedbParser.HASH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STAR() { return GetToken(SpicedbParser.STAR, 0); }
		public Relation_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relation_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.EnterRelation_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpicedbParserListener typedListener = listener as ISpicedbParserListener;
			if (typedListener != null) typedListener.ExitRelation_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpicedbParserVisitor<TResult> typedVisitor = visitor as ISpicedbParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelation_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Relation_typeContext relation_type() {
		Relation_typeContext _localctx = new Relation_typeContext(Context, State);
		EnterRule(_localctx, 14, RULE_relation_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			_localctx.name = Match(IDENTIFIER);
			State = 119;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case COLON:
				{
				{
				State = 115;
				Match(COLON);
				State = 116;
				_localctx.star = Match(STAR);
				}
				}
				break;
			case HASH:
				{
				{
				State = 117;
				Match(HASH);
				State = 118;
				_localctx.relation = Match(IDENTIFIER);
				}
				}
				break;
			case RELATION:
			case PERMISSION:
			case RIGHT_CURLY:
			case PIPE:
			case WITH:
				break;
			default:
				break;
			}
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WITH) {
				{
				State = 121;
				Match(WITH);
				State = 122;
				_localctx.caveat_name = Match(IDENTIFIER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
